--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass css/style.scss:css/style.css"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/asagohan2301/make-watch#readme",
   "dependencies": {
-    "fabric": "^5.3.0"
+    "fabric": "^5.3.0",
+    "sass": "^1.62.1"
   }
 }
